--- a/src/listitem.css
+++ b/src/listitem.css
@@ -8,12 +8,13 @@
     border:transparent;
 }
 .deleteButton{
-width:25px;
-height:25px;
-background-color:rgb(215, 101, 230);
-border-radius: 1rem;
-border: transparent;
-color:white;
-font-weight:bolder;
-margin-left:30px;
+    width: 40px;
+    height: 30px;
+    background-color: rgb(215, 101, 230);
+    border-radius: 1rem;
+    border: transparent;
+    padding: 2px 0px;
+    color: white;
+    font-weight: bolder;
+    margin-left: 30px;
 }
